manifests/database/phpmyadmin/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: phpmyadmin
  namespace: mariadb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: phpmyadmin
  ingress:
    - fromEntities:
        - ingress
        - remote-node
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mariadb-standalone
      toPorts:
        - ports:
            - port: "3306"
    - toEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "3306"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "3306"
    - toFQDNs:
        - matchName: www.phpmyadmin.net
      toPorts:
        - ports:
            - port: "443"
